2009-02-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/aportis.pdb:
	* tests/list:
	* tests/pocket-word.psw: Patch from Caolan McNamara to
	to add the Pocket Word and AportisDoc document types
	(Closes: #20185)

2009-02-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Götz Waschk and
	Milan Bouchet-Valat to add Office 2007/OpenXML documents
	mime-types (Closes: #13904)
	* tests/list:
	* tests/sample.docx:
	* tests/sample.pptx:
	* tests/sample.xlsx: Add test files for the above

2009-02-17  David Faure  <faure@kde.org>

	* freedesktop.org.xml.in: Rename image/x-fits to image/fits
	(IANA-registered name), and add image/x-fits as alias
	* tests/list: Update testcase accordingly

2009-02-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add *.vapi as a possible pattern
	for Vala files (Closes: #19507)

2009-02-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Robert DaSilva
	<spunit262@Yahoo.com> to make Javascript a sub-class of C sources
	so as to avoid misdetection
	* tests/list:
	* tests/survey.js: Add test-case from the bug above

2009-02-09  Bastien Nocera  <hadess@hadess.net>

	* tests/list: MS Office apps suck, we're not expected to recognise
	a template file by magic (Closes: #18863)

2009-02-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Gnucash documents aren't spreadsheets,
	so call it "financial data", leave the icon as-is though
	(Closes: #19355)

2009-02-09  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add alias for text/x-csv (Closes: #19664)

2009-02-09  Bastien Nocera  <hadess@hadess.net>

	* tests/list:
	* tests/test2.ppm: Add test case for PPM with non-working magic
	(Closes: #19811)

2009-02-06  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Patch from Koos Vriezen
	<koos.vriezen@gmail.com> to add more aliases for media types,
	as used by kmplayer (Closes: #19671)
