@@ -17,7 +17,7 @@ GammaChart.exr image/x-exr
 test.fit image/fits x
 test.fli video/x-flic ox
 test.gif image/gif
-test.ico image/x-ico
+test.ico image/vnd.microsoft.icon
 test.im1 image/x-sun-raster x
 test.jp2 image/jp2
 test.jpg image/jpeg
